[package]
name = "rustav"
version = "0.1.0"
edition = "2021"

[features]
mobile-ffmpeg-build = ["ffmpeg-next/build"]

[lib]
name = "rustav_native"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
libc = "0.2"
lazy_static = "1.4"
ffmpeg-next = "8.0"
retina = "0.4.17"
tokio = { version = "1", features = ["rt", "time"] }
futures-util = "0.3"
url = "2"
rml_rtmp = "0.8.0"
bytes = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
